<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@id/matchesFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.misw.sportalarmist.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_homeFragment_to_tournamentDetailFragment"
            app:destination="@id/tournamentDetailFragment" />
        <action
            android:id="@+id/action_homeFragment_to_teamDetailFragment"
            app:destination="@id/teamDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/teamDetailFragment"
        android:name="com.misw.sportalarmist.ui.team.TeamDetailFragment"
        android:label="@string/title_team_detail"
        tools:layout="@layout/fragment_team_detail">
        <argument
            android:name="tournament_id"
            app:argType="integer" />
        <argument
            android:name="team_id"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/tournamentDetailFragment"
        android:name="com.misw.sportalarmist.ui.tournament.TournamentDetailFragment"
        android:label="@string/title_tournament_detail"
        tools:layout="@layout/fragment_tournament_detail">
        <argument
            android:name="tournament_id"
            app:argType="integer" />
        <action
            android:id="@+id/action_tournamentDetailFragment_to_registrationFragment"
            app:destination="@id/registrationFragment" />
        <action
            android:id="@+id/action_tournamentDetailFragment_to_attendanceConfirmationFragment"
            app:destination="@id/attendanceConfirmationFragment" />
    </fragment>

    <fragment
        android:id="@+id/registrationFragment"
        android:name="com.misw.sportalarmist.ui.registration.RegistrationFragment"
        android:label="@string/title_registration"
        tools:layout="@layout/fragment_registration">
        <argument
            android:name="tournament_id"
            app:argType="integer" />
        <argument
            android:name="team_id"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/attendanceConfirmationFragment"
        android:name="com.misw.sportalarmist.ui.attendance.AttendanceConfirmationFragment"
        android:label="@string/title_attendance_confirmation"
        tools:layout="@layout/fragment_attendance_confirmation">
        <argument
            android:name="tournament_id"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/matchesFragment"
        android:name="com.misw.sportalarmist.ui.matches.MatchesFragment"
        android:label="@string/title_matches"
        tools:layout="@layout/fragment_matches">
        <argument
            android:name="filter_tournament"
            app:argType="string"
            app:nullable="true"
            android:defaultValue="@null" />
        <action
            android:id="@+id/action_matchesFragment_to_attendanceConfirmationFragment"
            app:destination="@id/attendanceConfirmationFragment" />
    </fragment>

</navigation>
